manifests/cluster-addons/harbor/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-core
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: core

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: jobservice
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: redis
      toPorts:
        - ports:
           - port: '6379'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: trivy
      toPorts:
        - ports:
           - port: '8080'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: registry
      toPorts:
        - ports:
           - port: '5000'
             protocol: TCP
           - port: '8080'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: portal
      toPorts:
        - ports:
           - port: '8080'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: jobservice
      toPorts:
        - ports:
           - port: '8080'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: harbor-database
      toPorts:
        - ports:
           - port: '5432'
             protocol: TCP

    - toFQDNs:
        - matchName: 'auth.docker.io'
        - matchName: 'registry-1.docker.io'
        - matchName: 'ghcr.io'
      toPorts:
        - ports:
           - port: '443'
             protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-redis
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: redis

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: trivy
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: jobservice
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-jobservice
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: jobservice

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
      toPorts:
        - ports:
           - port: '8080'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: redis
      toPorts:
        - ports:
           - port: '6379'
             protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: harbor-database
      toPorts:
        - ports:
           - port: '5432'
             protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-trivy
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: trivy

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: redis
      toPorts:
        - ports:
           - port: '6379'
             protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-portal
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: portal

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-registry
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: registry

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
      toPorts:
        - ports:
            - port: '5000'
              protocol: TCP
            - port: '8080'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-database
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: harbor-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: jobservice
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
